Swagger for admin api
